--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -137,7 +137,7 @@
 
   top: 0.5rem;
   left: 1rem;
-  z-index: 100;
+  z-index: 200;
 }
 
 .backToVariant a {
@@ -182,13 +182,13 @@
 }
 
 .nav__background img {
-  width: 20vw;
+  width: 50vw;
 }
 
 .nav__background__active {
   position: absolute;
   z-index: 50;
-  left: 0;
+  left: -4px;
 }
 
 .nav li {
@@ -200,6 +200,7 @@
   transition: all 300ms cubic-bezier(0.925, 0.045, 0.785, 0.925);
   transition-timing-function: cubic-bezier(0.925, 0.045, 0.785, 0.925);
   max-width: none;
+  z-index: 100;
 }
 
 .nav__inner {
@@ -318,14 +319,13 @@
   position: absolute;
   height: 4px;
   width: 100%;
-  background: var(--color-secondary1);
+  background: var(--color-secondary4__tint2);
   border-radius: 9px;
   opacity: 1;
-  left: 0;
   transform: rotate(0deg);
   transition: 0.25s ease-in-out;
-
   --spacings: 0.5rem;
+  border: 0.1px solid var(--color-secondary1__shade2);
 }
 .hamburger__open span {
   background: var(--color-secondary1__tint3);
